erDiagram
    Admin {
        uuid id PK "관리자 아이디"
        string name "관리자 이름"
        string email "관리자 이메일"
        string phone_number "관리자 전화번호"
        string password "관리자 비밀번호"
        string role "권한"
        string provider "인증 방법"
        date created_at "생성일"
        string created_by "생성자"
        date modified_at "수정일"
        string modified_by "수정자"
    }

    Respondents {
        uuid id PK "응답자 아이디"
        string name "응답자 이름"
        string email "응답자 이메일"
        string phone_number "응답자 전화번호"
        string provider "인증 방법"
        string survey_id "응답하는 설문 아이디"
        date created_at "생성일"
        string created_by "생성자"
    }

    Responses {
        uuid id PK "응답 아이디"
        string question_type "질문 유형"
        int order_number "질문 순서"
        response string "응답 정보"
        date created_at "생성일"
        string created_by "생성자"
        date modified_at "수정일"
        string modified_by "수정자"
    }

    Delete_Queue {
        bigint id PK "아이디"
        date created_at "생성일"
    }

    Surveys {
        uuid id PK "설문 아이디"
        string title "설문 제목"
        string description "설문 상세 정보"
        string status "설문 상태"
        date start_at "설문 시작 날짜"
        date end_at "설문 종료 날짜"
        string like "설문 좋아요 여부"
    }

    Questions {
        uuid id PK "질문 아이디"
        string title "질문 제목"
        string question_type "질문 유형"
        int order "질문 순서"
        string columns "질문 항목 정보"
        boolean required "필수 여부"
        boolean etc "기타 항목 적용 여부"
    }

    Admin ||--o{ Surveys : "has"
    Surveys ||--o{ Respondents : ""
    Respondents ||--o{ Responses : "has"
    Surveys ||--o{ Questions : "has"
    Surveys ||--o{ Responses : "has"
    Surveys ||--o{ Delete_Queue : ""
    Questions ||--|{ Responses : "has"
    Delete_Queue ||--o| Responses : ""
